# aexy

./: .env.prod.example  .gitignore  CHANGELOG.md  CLAUDE.md  COMMERCIAL_LICENSE.md  DEPLOY.md  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  google.md  package-lock.json  slack-app-manifest.json  slack.md
aexy-cli/: pyproject.toml
aexy-cli/src/devograph_cli/: __init__.py  main.py
backend/: .coverage  .env.example  Dockerfile  PERFORMANCE_OPTIMIZATIONS.md  README.md  celerybeat-schedule-wal  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 61fd11a7e0ea_add_public_project_visibility.py
backend/scripts/: backfill_aliases.py  backfill_ghost_dedup.py  backfill_project_task_statuses.py  check_llm_provider.py  dedupe_developer_ghosts.py  diagnose_developer_attribution.py  diagnose_developer_prs_by_repo.py  diagnose_pr_commits.py  diagnose_recent_commits.py  diagnose_workspace_sync_coverage.py  discover_alias_candidates.py  dump_automation_schema.py  fix_subscription_plans.py  generate_test_token.py  migrate_2026_04_14_microsoft_connections.sql  migrate_2026_07_09_backfill_ticket_task_team.sql  migrate_2026_07_09_ticket_share_links.sql  migrate_2026_07_16_public_community_chat.sql  migrate_2026_07_17_community_directory.sql  migrate_2026_07_17_developer_account_type.sql  migrate_agent_conversations.sql  migrate_agent_drafts.sql  migrate_agent_email.sql  migrate_agent_extended_config.sql  migrate_agent_message_streaming.sql  migrate_agent_policies.sql  migrate_agents.sql  migrate_ai_analysis.sql  migrate_ai_feedback.sql  migrate_alert_ticketing.sql  migrate_analytics_reports.sql  migrate_api_tokens.sql  migrate_api_tokens_seed.sql  migrate_app_access_requests.sql  migrate_app_access_templates.sql  migrate_ask.sql  migrate_ask_collaborative.sql  migrate_auto_sync_calendar_interval.sql  migrate_auto_sync_interval.sql  migrate_automation_agents.sql  (+98 more)
backend/scripts/migrations/: migrate_gtm_features.sql  migrate_gtm_record_id_fk.sql
backend/src/aexy/: main.py
backend/src/devograph/: __init__.py  main.py
backend/tests/: __init__.py  conftest.py
backend/tests/ai/: conftest.py  test_gateway_integration.py  test_lmstudio_provider.py  test_provider_contract.py
backend/tests/integration/: __init__.py  test_analytics_api.py  test_api_developers.py  test_crm_activity_feed.py  test_crm_activity_write.py  test_crm_hidden_column_enforcement.py  test_crm_query_contract.py  test_crm_query_search.py  test_crm_record_email.py  test_crm_relationship_mutations.py  test_crm_relationship_navigation.py  test_crm_workspace_isolation.py  test_csv_import_api.py  test_developer_insights_api.py  test_email_campaign_setup.py  test_exports_api.py  test_person_interaction_fields.py  test_predictions_api.py  test_reports_api.py  test_slack_api.py  test_table_query_contract.py  test_workflow_email_send.py  test_workspace_isolation_api.py  test_workspace_isolation_modules.py  test_workspace_tasks_api.py
backend/tests/unit/: __init__.py  test_action_integration_gating.py  test_activity_feed_role_scoping.py  test_agent_cost_estimation.py  test_agent_draft_service.py  test_agent_preview_prompt.py  test_agent_provider_selection.py  test_agent_stream_message.py  test_ai_autofill.py  test_alert_dedup_postgres.py  test_alert_ingestion.py  test_analysis_cache.py  test_analytics_dashboard.py  test_api_tokens.py  test_ask_provider_selection.py  test_auth_device_login.py  test_automation_dry_run.py  test_automation_email_outbox.py  test_automation_email_validation.py  test_automation_palette_registry.py  test_automation_registry_scope.py  test_batch2_hiring_smoke.py  test_chat_dm_postgres.py  test_chat_visibility.py  test_community_participation.py  test_crm_automation_dispatch_ordering.py  test_crm_automation_email_recipient.py  test_crm_automation_email_results.py  test_crm_automation_notify_admins.py  test_crm_automation_trigger_matching.py  test_crm_object_csv_import.py  test_crm_pipelines.py  test_crm_trigger_dispatch.py  test_csv_import_dry_run.py  test_csv_import_materialization.py  (+53 more)
mailagent/: .env.example  Dockerfile  README.md  TDD_TRACKER.md  pyproject.toml
mailagent/migrations/: 000_core_tables.sql  001_full_schema.sql  002_agent_invocations.sql
mailagent/tests/: __init__.py  conftest.py  test_admin.py  test_config.py  test_domains.py  test_health.py  test_internal_auth_middleware.py  test_onboarding.py
(+2352 files in other folders)
