[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aexy"
version = "0.3.0"
description = "GitHub-Based Developer Profiling & Analytics Platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.13.0",
    "pydantic[email]>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.26.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    # LLM providers
    "anthropic>=0.40.0",
    # LangGraph for AI agents
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-anthropic>=0.2.0",
    # SMS
    "twilio>=9.0.0",
    # Email (SMTP and AWS SES)
    "aiosmtplib>=3.0.0",
    "boto3>=1.34.0",
    # Email templating
    "jinja2>=3.1.0",
    "mjml>=0.11.0",
    # Caching and job queue
    "redis>=5.0.0",
    "celery>=5.3.0",
    "flower>=2.0.0",
    # Scheduling
    "apscheduler>=3.10.0",
    # Payments
    "stripe>=7.0.0",
    # JWT for GitHub App
    "PyJWT>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "aiosqlite>=0.19.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=src/aexy --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true

[tool.hatch.build.targets.wheel]
packages = ["src/aexy"]
